[tool.poetry]
name = "repl-nix-admirableglossyconversion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_admirableglossyconversion"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
